# rust-in-python

./: Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
.env/: pyvenv.cfg
.github/workflows/: CI.yml
notebooks/: beta_timing.ipynb
rusty_poetry/: __init__.py  _rusty_poetry.pyi  app.py
src/: lib.rs
string_sum/: __init__.py  _string_sum.pyi  app.py
tests/: test_app.py
