[tool.poetry]
name = "rusty_poetry"
version = "0.1.0"
description = "Rust in python demo"
authors = ["Adam Hardy <adh167@gmail.com>"]
readme = "README.md"

[tool.poetry.group.dev.dependencies]
maturin = "^1.4.0"
pytest = "^7.4.3"
coverage = "^7.3.3"

[project]
name = "rusty_poetry"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "rusty_poetry._rusty_poetry"
